# Damiao-Cpp-SDK

./: .gitignore  CMakeLists.txt  README.md
examples/: motor_test.cpp
include/dm_motor_sdk/: error_codes.h  logger.h  motor.h  motor_controller.h  motor_types.h  protocol_utils.h  serial_device.h  serial_device_interface.h
src/: motor.cpp  motor_controller.cpp  protocol_utils.cpp  serial_device.cpp
tests/: mock_serial_device.h  test_integration.cpp  test_protocol_utils.cpp
